# pt-names

./: README.md  pyproject.toml
pt_names/: gender_classifier.py  name_match.py  pt_name_gen.py
pt_names/data_files/: last_names.csv
tests/: test_name_match.py  test_pt_name_gen.py
