[tool.poetry]
name = "pt-names"
version = "0.1.0"
description = ""
authors = ["Simao Novais <snovaisg.97@gmail.com>"]
readme = "README.md"
packages = [{include = "pt_names"}]
include = ["data_sources/*"]

[tool.poetry.dependencies]
python = "^3.10"
importlib-resources = "^6.0.0"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
